--- a/index.html
+++ b/index.html
@@ -5,4 +5,4 @@
 <ccsymbol style="letter-spacing: 1px; vertical-align: middle; font-family: Helvetica,
                Arial,
                sans-serif,
-               CCSymbols;">🅭🅮🅯🄍🄎🄏</ccsymbol></div>
+               CCSymbols;">🅭🅮🅯🄍🄎🄏</ccsymbol>
